--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,10 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - name: Deploy application
+        run: |
+          echo "${{ secrets.PRIVATE_SSH_KEY }}" > deploy_key
+          ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'mkdir -p ${{ vars.DEST_FOLDER }}'
+          scp -i deploy_key -o StrictHostKeyChecking=no -r build/ ${{ vars.USER }}@${{ vars.REMOTE_HOST }}:${{ vars.DEST_FOLDER }}
+          ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'cd ${{ vars.DEST_FOLDER }} && npm install && npm start'
