--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Deploy application
         run: |
           echo "${{ secrets.PRIVATE_SSH_KEY }}" > deploy_key
+          chmod 400 deploy_key
           ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'mkdir -p ${{ vars.DEST_FOLDER }}'
           scp -i deploy_key -o StrictHostKeyChecking=no -r build/ ${{ vars.USER }}@${{ vars.REMOTE_HOST }}:${{ vars.DEST_FOLDER }}
           ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'cd ${{ vars.DEST_FOLDER }} && npm install && npm start'
