--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
           ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'mkdir -p ${{ vars.DEST_FOLDER }}'
           scp -i deploy_key -o StrictHostKeyChecking=no -r build/ package.json ${{ vars.USER }}@${{ vars.REMOTE_HOST }}:${{ vars.DEST_FOLDER }}
           ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'ls -la ${{ vars.DEST_FOLDER }}'
-          ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'cd ${{ vars.DEST_FOLDER }} && npm start'
+          ssh -i deploy_key -o StrictHostKeyChecking=no ${{ vars.USER }}@${{ vars.REMOTE_HOST }} 'cd ${{ vars.DEST_FOLDER }} && npm install && npm start'
