--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Your project description",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "pm2 start build/index.js --name app",
+    "destroy": "pm2 delete app",
     "build": "tsc",
     "test": "jest"
   },
@@ -26,6 +27,7 @@
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
+    "pm2": "^5.3.1",
     "supertest": "^6.1.3",
     "typescript": "^4.3.5"
   }
